--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,37 @@
-[tool.ruff]
-line-length = 100
-target-version = "py311"
-select = ["E", "F", "I"]
-ignore = []
-
 [tool.black]
 line-length = 100
-target-version = ["py311"]
+target-version = ["py310", "py311"]
+
+[tool.ruff]
+line-length = 100
+target-version = "py310"
+
+# Ignore notebooks, virtualenvs, and data files
+exclude = [
+    ".venv",
+    "venv",
+    "env",
+    "ENV",
+    "data",
+    "notebooks",
+    "__pycache__",
+    ".ipynb_checkpoints",
+]
+
+[tool.ruff.lint]
+# Enable common rule families
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # import sorting
+    "B",   # bugbear
+]
+ignore = [
+    "E501",  # line too long (handled by Black)
+]
+
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = [
+    "tests",
+]
