--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11"]
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -27,22 +28,31 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Install dev dependencies
+      - name: Install dev dependencies (incl. pre-commit)
         run: |
           pip install -r requirements-dev.txt
+          pip install pre-commit
 
-      # ----------------------
-      # Code style & linting
-      # ----------------------
+      # --------------------------------
+      # Pre-commit (runs configured hooks)
+      # --------------------------------
+      - name: Pre-commit (all files)
+        run: |
+          pre-commit --version
+          pre-commit run --all-files
+
+      # --------------------------------
+      # Code style & linting (explicit)
+      # --------------------------------
       - name: Black (check only)
         run: |
           black --version
-          black app.py tests --check
+          black . --check
 
       - name: Ruff (lint)
         run: |
           ruff --version
-          ruff check app.py tests --output-format=github
+          ruff check . --output-format=github
 
       # ----------------------
       # Unit tests
