--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,7 +1,14 @@
-# formatting & linting
+# Include base (production) requirements
+-r requirements.txt
+
+# ---------------------------------------
+# Development dependencies
+# ---------------------------------------
+
+# Formatting & linting
 black==24.8.0
 ruff==0.6.8
 
-# testing
+# Testing
 pytest==8.3.2
 pytest-cov==5.0.0
